<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.gestionUser.main_activity">


    <Button
        android:id="@+id/btn_sbumit"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="188dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_signup"
        android:textColor="@color/Secondary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frame_2" />


    <RelativeLayout
        android:id="@+id/frame_2"
        android:layout_width="156dp"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="182dp"
        android:background="@drawable/button_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="2dp"
            android:text="@string/btn_login" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="178dp"
        android:layout_height="140dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="199dp"
        android:layout_marginBottom="248dp"
        app:layout_constraintBottom_toTopOf="@+id/frame_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_logof" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="346dp"
        android:layout_height="79dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/main_desc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="180dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:text="@string/green_world"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>