<?xml version="1.0" encoding="utf-8"?>
<com.mindinventory.midrawer.MIDrawerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:fitsSystemWindows="true"
    app:sliderType="scroll"
    tools:openDrawer="start"

    >

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="600dp"


        />

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nav_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_set_as"
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/white"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/scroll"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/drawer_bg" />

            <TextView
                android:id="@+id/nav_slide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_set_as"
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/white"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/slide"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/drawer_bg" />

            <TextView
                android:id="@+id/nav_doorIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_set_as"
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/white"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="Gestion Event"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/drawer_bg" />

            <TextView
                android:id="@+id/nav_doorOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_set_as"
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/white"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/dechet"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/drawer_bg" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/dechets" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="70dp"
            android:paddingRight="@dimen/_29sdp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/circularImageView"
                android:layout_width="130dp"
                android:layout_height="111dp"
                android:scaleType="centerCrop"
                android:src="@drawable/circle_background" />

            <ImageButton
                android:id="@+id/logout"
                android:layout_width="59dp"
                android:layout_height="40dp"
                android:background="@drawable/baseline_logout_24"
                >

            </ImageButton>

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</com.mindinventory.midrawer.MIDrawerView>
